--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,106 @@ body {
     font-family: Arial, sans-serif;
     padding-left: 20px;
 }
+
+
+.hidden {
+    display: none;
+}
+
+.container {
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.products-section {
+    flex-grow: 2;
+    padding-right: 60px;
+}
+
+.cart-section {
+    flex-grow: 1;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.product{
+    border-bottom: 2px solid #cfcfcf;
+    display: flex;
+    padding: 20px 0;
+}
+
+.product:first-child {
+    padding-top: 0;
+}
+
+.product-price-container{
+    padding-top: 20px;
+}
+.product-coupon-container select.product-coupon {
+    margin-top: 20px;
+    padding: 10px 5px 10px 0;
+    border: none;
+    font-size: 1rem;
+} 
+
+
+img.product-image {
+    width: 175px;
+ }
+ 
+ .product-image-container {
+     padding-right: 30px;
+ }
+
+.product-details{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+}
+
+button {
+    background-color: #f7fbff;
+    color: #000000;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    border: 2px solid #e2e2e2;
+    border-radius: 18px;
+    font-size: 1rem;
+}
+
+.button-group {
+    border: none;
+    padding: 8px 20px;
+    font-size: 1.2rem;
+}
+
+button:hover {
+    box-shadow: 0px 15px 25px -5px #e2e2e2;
+    transform: scale(1.01);
+  }
+
+button:active {
+    box-shadow: 0px 4px 8px #e2e2e2;
+    transform: scale(1);
+}
+
+.product-counter button{
+    border: none;
+    padding: 4px 10px;
+    font-size: 1.2rem;
+    margin: 4px 10px;
+}
+
+.cart-summary{
+    background-color: #f3f3f3;
+    border-radius: 20px;
+    padding: 20px 40px;
+}
+
+.cart-summary h2{
+    font-size: 1.5rem;
+    margin: 10px 0;
+}
