--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 :root {
     --border-color: #cfcfcf;
     --button-bg: #f7fbff;
+    --button-bg-disabled: #cecece;
     --cta-bg: #008cf2;
     --button-border: #e2e2e2;
     --cart-bg: #f3f3f3;
@@ -10,9 +11,37 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
     padding-left: 40px;
     padding-right: 40px;
+}
+
+button {
+    background-color: var(--button-bg);
+    color: #000000;
+    padding: 8px 24px;
+    border: none;
+    cursor: pointer;
+    border: 2px solid var(--button-border);
+    border-radius: var(--border-radius);
+    font-size: 1rem;
+}
+
+button:not([disabled]):hover {
+    box-shadow: 0px 15px 25px -5px var(--button-border);
+    transform: scale(1.01);
+}
+
+button:not([disabled]):active {
+    box-shadow: 0px 4px 8px var(--button-border);
+    transform: scale(1);
+}
+
+button[disabled] {
+    background-color: var(--button-bg-disabled); 
+    cursor: not-allowed;
+    box-shadow: none;
 }
 
 .container {
@@ -66,39 +95,36 @@ img.product-image {
     min-width: 200px;
 }
 
-button {
-    background-color: var(--button-bg);
-    color: #000000;
-    padding: 8px 24px;
-    border: none;
-    cursor: pointer;
-    border: 2px solid var(--button-border);
-    border-radius: var(--border-radius);
-    font-size: 1rem;
+.product .product-name{
+    font-weight: 500;
 }
+
 
 .button-group {
     border: 2px solid var(--button-border);
-    padding: 3px;
+    padding: 0;
     font-size: 1.2rem;
     background-color: var(--button-bg);
     border-radius: 25px;
+    height: 33px;
+    width: 128px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.button-group button {
+    font-size: 1.5rem;
+    margin: 0px;
+    padding: 4px;
+    width: 30px;
+    height: 30px;
 }
 
 
-button:hover {
-    box-shadow: 0px 15px 25px -5px var(--button-border);
-    transform: scale(1.01);
-}
-
-button:active {
-    box-shadow: 0px 4px 8px var(--button-border);
-    transform: scale(1);
-}
 
 .product-counter{
     display: flex;
-    padding: 2px 2px;
 
 }
 
@@ -106,28 +132,39 @@ button:active {
     border: none;
     padding: 4px 10px;
     font-size: 1.2rem;
-    margin: 0px 10px;
+    margin: 0px 4px;
 }
 
 .product-counter .remove-item{
-    border: 2px solid var(--button-border);
+    border: 2px solid var(--button-border);   
+    padding: 2px 10px;
+    font-size: 0.75rem;
 }
+
+
 
 .cart-summary{
     background-color: var(--cart-bg);
     border-radius: var(--border-radius);
     padding: 20px 40px;
+    min-width: 300px;
 }
 
 .cart-summary h2{
     font-size: 1.5rem;
     margin: 10px 0;
+    font-weight: 500;
 }
 
 .cart-summary .price-item{
     display: flex;
     margin: 20px 0;
     justify-content: space-between;
+}
+
+.cart-summary .price-item #total{
+    font-weight: bold;
+    font-size: 1.2rem;
 }
 
 .cart-summary .label{
@@ -137,6 +174,9 @@ button:active {
 .cart-summary button.checkout-button{
     width: 100%;
     margin: 25px 0;
+}
+
+.cart-summary button:not([disabled]).checkout-button{
     background-color: var(--cta-bg);
     color: white;
 }
@@ -145,6 +185,8 @@ button:active {
     color: var(--text-muted);
     text-align: center;
     font-size: 0.9rem;
+    font-weight: 300;
+    margin: 15px 0px 25px 0px
 }
 
 .promo-code-section{
@@ -154,6 +196,7 @@ button:active {
 
 .promo-code-section label{
     font-size: 0.825rem;
+    font-weight: 400;
 }
 
 .promo-code-control-container{
@@ -186,6 +229,6 @@ input::placeholder {
 }
 
 
-.hidden {
+.hidden.hidden.hidden {
     display: none;
 }
